# Lebensmittelwarnung-scraper

./: .gitignore  Lebensmittelwarnung.py  README.md  demo.py  pyproject.toml  scrape_to_json.py
tests/: lebensmittelwarnung_test.py
