[tool.poetry]
name = "lebensmittelwarnung"
version = "0.1"
description = ""
authors = ["auchtetraborat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
